Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -11,7 +11,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
   </div>
   <div class="row header-1">
     <div class="large-6 columns header-left">
-      <img src="/img/header-logo.png" alt="Logo" />
+      <img src="/couic2018/img/header-logo.png" alt="Logo" />
       <h2 class="couic">Couic !</h2>
       <h3 class="sub-couic">Coupons court à la <br />castration des porcelets</h3>
     </div>
@@ -58,22 +58,22 @@ title: "Welfarm : Coupons court à la castration des porcelets"
     <div class="show-for-small-only">
       <div class="medium-6 columns part-3">
 	<p class="cet-acte">Cet acte est :</p>
-	<img src="/img/grey-cochon.png" alt="Cochon">
+	<img src="/couic2018/img/grey-cochon.png" alt="Cochon">
 	<p class="orange-color uppercase bold">Extrêmement douloureux pour l’animal</p>
-	<img src="/img/grey-terre.png" alt="Terre">
+	<img src="/couic2018/img/grey-terre.png" alt="Terre">
 	<p>Néfaste pour l’environnement </p>
-	<img src="/img/grey-economie.png" alt="Economie">
+	<img src="/couic2018/img/grey-economie.png" alt="Economie">
 	<p>Un non-sens économique</p>
-	<img src="/img/grey-eleveur.png" alt="Eleveur">
+	<img src="/couic2018/img/grey-eleveur.png" alt="Eleveur">
 	<p>Pénible pour l’éleveur qui réalise la castration</p>
       </div>
     </div>
     <div class="show-for-medium-up">
       <div class="medium-2 columns img-stack">
-	<img src="/img/grey-cochon.png" alt="Cochon">
-	<img src="/img/grey-terre.png" alt="Terre">
-	<img src="/img/grey-economie.png" alt="Economie">
-	<img src="/img/grey-eleveur.png" alt="Eleveur">
+	<img src="/couic2018/img/grey-cochon.png" alt="Cochon">
+	<img src="/couic2018/img/grey-terre.png" alt="Terre">
+	<img src="/couic2018/img/grey-economie.png" alt="Economie">
+	<img src="/couic2018/img/grey-eleveur.png" alt="Eleveur">
       </div>
       <div class="medium-6 columns part-3">
 	<p class="cet-acte">Cet acte est :</p>
@@ -94,12 +94,12 @@ title: "Welfarm : Coupons court à la castration des porcelets"
       </p>
     </div>
     <div class="medium-4 columns qui">
-      <img class="second" src="/img/grey-qui.png">
+      <img class="second" src="/couic2018/img/grey-qui.png">
       <h4>Qui ?</h4>
       <p>Tous les porcelets mâles</p>
     </div>
     <div class="medium-4 columns pourquoi">
-      <img class="third" src="/img/grey-pourquoi.png">
+      <img class="third" src="/couic2018/img/grey-pourquoi.png">
       <h4>Pourquoi ?</h4>
       <p>Une odeur désagréable peut apparaître à la première cuisson de la viande de certains animaux…</p>
     </div>
@@ -130,7 +130,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	<div class="arrow arrow-green"></div>
 	<h4>L’élevage de porcs <br /><span class="bold">non castrés</span></h4>
 	<div class="button">En abattoir</div>
-	<img src="/img/green-1.png" alt="">
+	<img src="/couic2018/img/green-1.png" alt="">
 	<p>
 	Les animaux ne sont pas castrés.<br />
 	Sur la chaîne d’abattage, un employé chauffe un morceau des carcasses des mâles non castrés.<br />
@@ -143,7 +143,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	<div class="arrow arrow-green"></div>
 	<h4>L’<span class="bold">immunocastration</span></h4>
 	<div class="button">En élevage</div>
-	<img src="/img/green-2.png" alt="">
+	<img src="/couic2018/img/green-2.png" alt="">
 	<p>
 	Un « vaccin anti-odeur » est administré aux porcelets mâles afin d’inhiber la production des molécules responsables de l’odeur désagréable.<br />
 	L’ANSES (Agence nationale de sécurité sanitaire de l’alimentation, de l’environnement et du travail), et son homologue européen l’EFSA ont autorisé sa mise sur le marché depuis 2009 et ont certifié qu’on ne retrouvait aucun résidu dans la viande de porc.
@@ -156,7 +156,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	<h4>Les <span class="bold">avantages</span></h4>
 	<div class="row small-collapse">
 	  <div class="small-3 columns">
-	    <img class="green-3-1" src="/img/green-3-1.png">
+	    <img class="green-3-1" src="/couic2018/img/green-3-1.png">
 	  </div>
 	  <div class="small-8 small-offset-1 columns">
 	    <p class="bold uppercase green-color first">éthiques : Indolores pour l’animal</p>
@@ -164,7 +164,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	</div>
 	<div class="row small-collapse">
 	  <div class="small-3 columns">
-	    <img src="/img/green-3-2.png">
+	    <img src="/couic2018/img/green-3-2.png">
 	  </div>
 	  <div class="small-8 small-offset-1 columns">
 	    <p>
@@ -175,7 +175,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	</div>
 	<div class="row small-collapse">
 	  <div class="small-3 columns">
-	    <img src="/img/green-3-3.png">
+	    <img src="/couic2018/img/green-3-3.png">
 	  </div>
 	  <div class="small-8 small-offset-1 columns">
 	    <p>
@@ -191,9 +191,9 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 <section class="agis">
   <div class="row">
     <div class="large-12 columns fleche">
-      <img src="/img/arrow.png" alt="Fleche">
+      <img src="/couic2018/img/arrow.png" alt="Fleche">
       <p>J'agis</p>
-      <img src="/img/arrow.png" alt="Fleche">
+      <img src="/couic2018/img/arrow.png" alt="Fleche">
     </div>
   </div>
 </section>
