Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -255,7 +255,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	<div class="large-4 columns share">
 	  <p>Je partage :</p>
 	  <a class="social-network" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}">
-	    <img src="/img/fb.png" alt="Facebook">
+	    <img src="/couic2018/img/fb.png" alt="Facebook">
 	  </a>
 	  <a class="social-network" href="https://twitter.com/home?status=%23COUIC2018%3A%20Mobilisons-nous%20contre%20la%20castration%20%C3%A0%20vif%20des%20porcelets!%20Comme%20moi%2C%20%C3%A9crivez%20aux%20marques%20sur%20www.couic2018.fr%20%40WelfarmFR">
 	    <img src="/couic2018/img/twitter.png" alt="Twitter">
