Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: couic
 title: "Welfarm : Coupons court à la castration des porcelets"
 ---
 
@@ -266,5 +266,5 @@ title: "Welfarm : Coupons court à la castration des porcelets"
     </form>
   </div>
 </section>
-{% include professionels.html arrows=true %}
-{% include footer.html %}
+{% include couic-professionels.html arrows=true %}
+{% include couic-footer.html %}
