Updated 'viededinde/index.html' via CloudCannon

--- a/viededinde/index.html
+++ b/viededinde/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: viededinde
 title: "Vie de dinde - L'enfer quotidien - Welfar"
 og-title: "Vie de dinde"
 og-description: "97% des dindes en france sont élevées de façon intensive. Ne soyez pas le dindon de la farce, refusez l’élevage intensif"
@@ -193,4 +193,4 @@ og-image: "/img/viededinde.png"
   </div>
 </div>
 </section>
-{% include footer.html %}
+{% include viededinde-footer.html %}
