Updated 'viededinde/merci.html' via CloudCannon

--- a/viededinde/merci.html
+++ b/viededinde/merci.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: couic
 title: "Welfarm : Coupons court à la castration des porcelets"
 ---
 
@@ -51,8 +51,8 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 </section>
 <div class="arrow arrow-green"></div>
 
-{% include professionels.html %}
-{% include footer.html %}
+{% include viededinde-professionels.html %}
+{% include viededinde-footer.html %}
 
 <!-- Google Code for Petition Couic2018 Conversion Page -->
 <script type="text/javascript">
