--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -38,7 +38,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
     </div>
     <div class="large-5 columns share">
       <p>Je partage :</p>
-      <a class="social-network" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}">
+      <a class="social-network" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}">
 	<img src="/couic2018/img/fb.png" alt="Facebook">
       </a>
       <a class="social-network" href="https://twitter.com/home?status=%23COUIC2018%20/%20Non%20%C3%A0%20la%20%23castration%20%C3%A0%20vif%20des%20%23porcelets%20!%20Vid%C3%A9o%20et%20%23p%C3%A9tition%20%C3%A0%20partager%20sur%20www.couic2018.fr">
