Updated 'viededinde/index.html' via CloudCannon

--- a/viededinde/index.html
+++ b/viededinde/index.html
@@ -42,7 +42,7 @@ og-image: "/viededinde/img/viededinde.png"
  </div>
  <div class="large-5 columns share">
   <p>Je partage :</p>
-  <a class="social-network" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}">
+  <a class="social-network" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}">
    <img src="/viededinde/img/fb.png" alt="Facebook">
  </a>
  <a class="social-network" href="https://twitter.com/intent/tweet?hashtags=;text=Ne%20soyez%20pas%20le%20dindon%20de%20la%20farce%2C%20refusez%20l%E2%80%99%C3%A9levage%20intensif.%20Signez%20la%20p%C3%A9tition%20sur%20www.viededinde.fr%20%40WelfarmFR">
