Updated 'inscription/index.html' via CloudCannon

--- a/inscription/index.html
+++ b/inscription/index.html
@@ -25,7 +25,7 @@
 	<section id="section-form">
 		<div class="row">
 			<div class="small-centered small-11 medium-11 large-10 columns form-container">
-				<h6>En vous inscrivant à la Newsletter de la SPA, vous recevrez dans votre boîte mail les dernières actualités de la Société Protectrice des Animaux. Merci de l'intérêt que vous portez à notre action.</h6>
+				<h6>En vous inscrivant à la Newsletter Welfarm, vous recevrez dans votre boîte mail les dernières actualités de la Société Protectrice des Animaux. Merci de l'intérêt que vous portez à notre action.</h6>
 				<form autocomplete="on">
 					<div class="radio">
 						<input class="mandatory" id="f_homme" type="radio" name="civility" value="Monsieur">
