--- a/inscription/index.html
+++ b/inscription/index.html
@@ -44,6 +44,7 @@
 					<div class="feedback g_error">
 						Les champs marqués en rouge sont obligatoires
 					</div>
+					<div class="g-recaptcha" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK"></div>
 					<p>En vous inscrivant, vous acceptez de recevoir des informations de la part de la SPA.</p>
 					<input class="g-recaptcha" data-sitekey="6LeQtxkUAAAAAMxBnBWU78-x1tNlYKWGJFjEBfuL" type="button" id="f_summit" onclick="validateForm()" value="Je m’inscris" name="soumettre">
 				</form>
@@ -52,7 +53,7 @@
 	</section>
 	<footer>
 		<div class="row expanded">
-		<p>© 2017 WELFARM</p>
+			<p>© 2017 WELFARM</p>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
