Updated 'inscription/index.html' via CloudCannon

--- a/inscription/index.html
+++ b/inscription/index.html
@@ -46,7 +46,7 @@
 						Les champs marqués en rouge sont obligatoires
 					</div>
 					<p>En vous inscrivant, vous acceptez de recevoir des informations de la part de Welfarm.</p>
-					<input class="g-recaptcha" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK" type="button" id="f_summit" onclick="validateForm()" value="Je m’inscris" name="soumettre" disable>
+					<input class="g-recaptcha" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK" type="button" id="f_summit" onclick="validateForm()" value="Je m’inscris" name="soumettre" disabled>
 				</form>
 			</div>
 		</div>
