Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -248,7 +248,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	  </label>
 	</div>
 	<div class="small-12 small-centered column">
-	Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i>
+	Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i>&nbsp;&nbsp;
     </div>
       </div>
       <div class="row large-collapse">
