--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -246,10 +246,8 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	  <label for="1-checkbox">
 	    <span></span>Je souhaite recevoir la newsletter de WELFARM
 	  </label>
+	  <p>Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i></p>
 	</div>
-	<div class="small-12 small-centered column">
-	Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i>&nbsp;&nbsp;
-    </div>
       </div>
       <div class="row large-collapse">
 	<div class="large-offset-4 large-4 columns">
