--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -13,7 +13,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
     <div class="large-6 columns header-left">
       <img src="/couic2018/img/header-logo.png" alt="Logo" />
       <h2 class="couic">Couic !</h2>
-      <h3 class="sub-couic">Coupons court à la <br />castration des porcelets</h3>
+      <h3 class="sub-couic">Coupons court aux <br />mutilations des porcelets</h3>
     </div>
     <div class="large-6 columns">
       <div class="video flex-video">
