Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -246,7 +246,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
 	  <label for="1-checkbox">
 	    <span></span>Je souhaite recevoir la newsletter de WELFARM
 	  </label>
-	  <p>Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i></p>
+	  <p>Je consens à ce que mes coordonnées personnelles puissent être partagées avec la fédération Eurogroup for Animals, ses organisations membres et la Commission européenne, dans le cadre de la campagne EndPigPain.</i></p>
 	</div>
       </div>
       <div class="row large-collapse">
