Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -48,7 +48,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
          </a>
       </div>
       <div class="medium-4 columns">
-         <a href=".footer" class="button">
+         <a href="#aller-plus-loin" class="button">
             <!--CHANGE-->
             Je consomme différemment
          </a>
