add label on all the index.html

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -216,6 +216,10 @@ title: "Welfarm : Coupons court à la castration des porcelets"
                <label for="1-checkbox">
                <span></span>Je souhaite recevoir la newsletter de WELFARM
                </label>
+               <input name="optin" type="checkbox" id="2-checkbox">
+               <label for="2-checkbox">
+               <span></span>Je souhaite recevoir des emails des partenaires de WELFARM
+               </label>
                <p>Attention, dans le cadre de la campagne européenne EndPigPain* pour mettre fin aux mutilations en élevage porcin, ces informations pourront être partagées avec la fédération Eurogroup for Animals pour les actions de lobbying auprès de la commission européenne notamment. <i>*Fin à la douleur des cochons</i></p>
             </div>
          </div>
