modif label optin_partenaire

--- a/viededinde/index.html
+++ b/viededinde/index.html
@@ -158,7 +158,7 @@ og-image: "/viededinde/img/viededinde.png"
        </label>
      </div>
      <div class="large-12 columns">
-       <input name="optin" type="checkbox" id="2-checkbox">
+       <input name="optin_partenaire" type="checkbox" id="2-checkbox">
        <label for="2-checkbox">
          <span></span>Je souhaite recevoir des emails des partenaires de WELFARM
         </label>
