--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -216,7 +216,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
                <label for="1-checkbox">
                <span></span>Je souhaite recevoir la newsletter de WELFARM
                </label>
-               <input name="optin" type="checkbox" id="2-checkbox">
+               <input name="optin_partenaire" type="checkbox" id="2-checkbox">
                <label for="2-checkbox">
                <span></span>Je souhaite recevoir des emails des partenaires de WELFARM
                </label>
