Updated 'couic2018/index.html' via CloudCannon

--- a/couic2018/index.html
+++ b/couic2018/index.html
@@ -122,7 +122,7 @@ title: "Welfarm : Coupons court à la castration des porcelets"
         <p>
             Pour éviter que les animaux,
             maintenus dans un état de stress
-            et de frustration, ne se mordents la
+            et de frustration, ne se mordent la
             queue entre eux
          </p>
       </div>
