Updated 'viededinde/index.html' via CloudCannon

--- a/viededinde/index.html
+++ b/viededinde/index.html
@@ -1,6 +1,6 @@
 ---
 layout: viededinde
-title: "Vie de dinde - L'enfer quotidien - Welfar"
+title: "Vie de dinde - L'enfer quotidien - Welfarm"
 og-title: "Vie de dinde"
 og-description: "97% des dindes en france sont élevées de façon intensive. Ne soyez pas le dindon de la farce, refusez l’élevage intensif"
 og-image: "/viededinde/img/viededinde.png"
