--- a/challenge/index.html
+++ b/challenge/index.html
@@ -230,7 +230,7 @@
 						<div id="formContainer">
 							<div class="row collapse margin-top-1" style="margin-bottom: 2px;max-width: 410px;background-color: white;">
 								<div class="column small-5 large-5 text-left">
-									<span id="nbVote">15345</span>
+									<span id="nbVote">X</span>
 								</div>
 								<div class="column small-7 large-7 text-left">
 									<p id="text-vote" class="text-left large-text-center">personnes relèvent déjà le défi&nbsp;!</p>
