--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr" class="no-js">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenge</title>
-  <link rel="stylesheet" type="text/css" title="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" type="text/css" title="stylesheet" href="css/intlTelInput.css" />
-  <link rel="stylesheet" type="text/css" title="stylesheet" href="css/app.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:url"           content="http://action.welfarm.fr/challenge" />
+	<meta property="og:type"          content="Website" />
+	<meta property="og:title"         content="Je participe au challenge ZEROFOIEGRAS.FR" />
+	<meta property="og:description"   content="En France, chaque année, 35 millions de canards sont gavés dans d’horribles souffrances pour la production de foie gras, de magrets et confits… j’agis" />
+	<meta property="og:image"         content="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/og.png" />
+	<meta property="fb:app_id" content="1942485012743307" />
+	<title>Challenge</title>
+	<link rel="stylesheet" type="text/css" title="stylesheet" href="css/foundation.min.css">
+	<link rel="stylesheet" type="text/css" title="stylesheet" href="css/intlTelInput.css" />
+	<link rel="stylesheet" type="text/css" title="stylesheet" href="css/app.css">
 </head>
 <body>
 	<!-- Init Facebook API -->
@@ -327,25 +333,25 @@
 			</div>
 		</div>
 	</footer>
-<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
-<script src="js/intlTelInput.min.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/main.js"></script>
-<script src="js/sendForm.js"></script>
-<script>
-var a = document.getElementsByClassName('button-partage');
-function fb() {
-	FB.ui({
-      method: 'share',
-      display: 'popup',
-      href: 'http://action.welfarm.fr/challenge',
-    }, function(response){});
-}
+	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
+	<script src="js/intlTelInput.min.js"></script>
+	<script src="js/vendor/what-input.js"></script>
+	<script src="js/vendor/foundation.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/sendForm.js"></script>
+	<script>
+	var a = document.getElementsByClassName('button-partage');
+	function fb() {
+		FB.ui({
+			method: 'share',
+			display: 'popup',
+			href: 'http://action.welfarm.fr/challenge',
+		}, function(response){});
+	}
 
-a[0].onclick = fb;
-a[1].onclick = fb;
-</script>
+	a[0].onclick = fb;
+	a[1].onclick = fb;
+	</script>
 </body>
 </html>
