Updated 6 files via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -37,13 +37,13 @@
 	<!-- End of Facebook API -->
 
 	<header>
-		<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/logo-welfarm.png" alt="Welfarm" style="position: absolute;top: 20px;left: 30px;" class="show-for-large"/>
+		<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/logo-welfarm.png" alt="Welfarm" style="position: absolute;top: 20px;left: 30px;width: 180px;" class="show-for-large"/>
 		<!-- Mode Desktop -->
 		<div class="show-for-large" style="">
 			<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/top-header-large.png" class="width-100"/>
 			<div class="row expanded margin-bottom-0" style="background: url('https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/ligne-header-large-2.png')">
 				<div id="header-1-large" style="z-index: 3">
-					<button type="button" class="button-header button-challenge" style="margin-top: 20px;margin-bottom: 10px;"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/trophy.png" />JE DÉCOUVRE LE CHALLENGE</button><br />
+					<button type="button" class="button-header button-challenge" style="margin-top: 20px;margin-bottom: 10px;"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/trophy.png"  style="position: relative; top: -3px;"/><span style="margin-top: 4px;display: inline-block;">JE DÉCOUVRE LE CHALLENGE</span></button><br />
 					<button type="button" class="button-header button-partage"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/people.png" />JE METS AU DÉFI MES AMIS</button>
 				</div>
 			</div>
@@ -137,8 +137,8 @@
 				<img class="hide-for-large" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/fleche-header.png" style="width: 100%;display: inline-block;z-index: 1;"/>
 				<div>
 					<div class="container margin-top-3 margin-bottom-2">
-						<h2 id="tout-cela">TOUT CELA VOUS RÉVOLTE ?</h2>
-						<p id="vous-etes">Vous êtes prêts pour le challenge #ZEROFOIEGRAS ?<br /> Alors, en piste&nbsp;!</p>
+						<h2 id="tout-cela">TOUT CELA VOUS RÉVOLTE&nbsp;?</h2>
+						<p id="vous-etes">Vous êtes prêts pour le challenge #ZEROFOIEGRAS&nbsp;?<br /> Alors, en piste&nbsp;!</p>
 					</div>
 				</div>
 				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/top-ardoise.png" style="width: 100%;max-width: 600px;"/>
@@ -209,7 +209,7 @@
 									</div>
 								</div>
 							</div>
-							<p style="font-family: 'Myriad Pro', Myriad;line-height: 1.2;margin-top: 10px;margin-left: 43px;text-align: left;">*sondage OpinionWay pour L214, 2013<br />** sondage IFOP, pour La Fondation Brigitte Bardot, 2016</p>
+							<p style="font-family: Helvetica Neue,Helvetica,Arial,sans-serif;font-style: italic;font-size: 10px;line-height: 1.2;margin-top: 10px;margin-left: 43px;text-align: left;">*sondage OpinionWay pour L214, 2013<br />** sondage IFOP, pour La Fondation Brigitte Bardot, 2016</p>
 						</div>
 
 						<div>
@@ -240,9 +240,9 @@
 				<div>
 					<h4>DES PROFESSIONNELS S'ENGAGENT</h4>
 				</div>
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/fotolia.png" />
+				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/fotolia.jpg" style="margin-bottom: 20px;position: relative;left: -40px;" />
 				<div>
-					<h5>Restaurateurs, établissements publics, écoles… Retrouvez ci-dessous tous les professionnels qui relèvent le défi d’organiser des fêtes sans foie gras.</h5>
+					<h5 style="margin-bottom: 20px;">Restaurateurs, établissements publics, écoles… Retrouvez ci-dessous tous les professionnels qui relèvent le défi d’organiser des fêtes sans foie gras.</h5>
 				</div>
 				<div id="endForm">
 					<div>
@@ -258,7 +258,7 @@
 							<div class="margin-top-1" style="margin-bottom: 2px;max-width: 410px;background-color: white;">
 								<div style="display: table; width: 100%;text-align: left;">
 									<div style="display: table-cell;text-align: left;">
-										<span id="nbVote" style="margin-right: 10px;">X</span>
+										<span id="nbVote" style="margin-right: 5px;">X</span>
 									</div>
 									<div style="display: table-cell">
 										<p id="text-vote" class="text-left">personnes relèvent déjà le défi&nbsp;!</p>
@@ -305,27 +305,27 @@
 		<div class="row">
 			<div class="column small-centered small-10 medium-10 large-10">
 				<div style="color: white;font-family: 'Helvetica';font-size: 14px;text-align: center;">
-					<p style="font-weight: bold;font-size: 16px;line-height: 1.2;">Depuis 1984, Welfarm agit pour améliorer le bien&#8209;être des animaux d'élevage à toutes les étapes de leur vie (élevage, transport, abattage).</p>
-					<p style="font-weight: bold;font-size: 16px;line-height: 1.2;">Agir avec Welfarm, c'est :</p>
-					<p style="line-height: 1.2;">- Lutter contre l'élevage intensif et ses dérives</p>
-					<p style="line-height: 1.2;">- Contribuer à l'amélioration des conditions de vie des animaux</p>
-					<p style="line-height: 1.2;">- Participer à l'émergence d'une société où l'animal est respecté pour sa valeur intrinsèque</p>
+					<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Depuis 1984, Welfarm agit pour améliorer le bien&#8209;être des animaux d'élevage à toutes les étapes de leur vie (élevage, transport, abattage).</p>
+					<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Agir avec Welfarm, c'est :</p>
+					<p style="line-height: 1.2;font-size: 16px;">- Lutter contre l'élevage intensif et ses dérives</p>
+					<p style="line-height: 1.2;font-size: 16px;">- Contribuer à l'amélioration des conditions de vie des animaux</p>
+					<p style="line-height: 1.2;font-size: 16px;">- Participer à l'émergence d'une société où l'animal est respecté pour sa valeur intrinsèque</p>
 					<div class="margin-bottom-2 margin-top-2">
 						<div style="display: table;">
 							<div style="display: table-cell;vertical-align: middle;">
 								<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/comite.png" style="min-width: 50px;margin-right: 30px;" />
 							</div>
 							<div style="display: table-cell;vertical-align: middle;">
-								<p style="color: white;font-family: 'Helvetica';font-size: 14px;text-align: left;line-height: 1.2;">Association française indépendante, WF est financée uniquement par la générosité publique.<br />L’association bénéficie du label Don en confiance. Sa mission est reconnue d’utilité publique.</p>
+								<p style="color: white;font-family: 'Helvetica';font-size: 16px;text-align: left;line-height: 1.2;">L’association WELFARM est labellisée par le Don en confiance, organisme de labellisation et de contrôle des associations et fondations faisant appels aux dons. Ainsi, l’association s’engage à respecter ses principes de transparence financière et de rigueur de gestion.</p>
 							</div>
 						</div>
 					</div>
 					<div class="row margin-bottom-2">
 						<div class="column small-offset-1 small-10 medium-offset-2 medium-4 margin-bottom-1">
-							<a href="#"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 17px;">J'AGIS</div></a>
+							<a href="#"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 20px;">J'AGIS</div></a>
 						</div>
 						<div class="column small-offset-1 small-10 medium-offset-0 medium-4 margin-bottom-1 end">
-							<a href="#"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 17px;">JE FAIS UN DON</div></a>
+							<a href="https://donner.welfarm.fr/b?cid=28&lang=fr_FR"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 20px;">JE FAIS UN DON</div></a>
 						</div>
 					</div>
 					<p style="color: white;font-family: 'Helvetica';font-size: 14px;margin-bottom: 35px;">© Welfarm 2017 | <a href="#" style="color: white;">Informations légales</a></p>
