Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -346,6 +346,9 @@
 		FB.ui({
 			method: 'share',
 			display: 'popup',
+			quote: "Je viens de m'engager à passer des fêtes sans souffrances animales avec l’association WELFARM.
+			Vous aussi, relevez le challenge #ZéroFoieGras !
+			RDV suracti on.welfarm.fr/challenge",
 			href: 'http://action.welfarm.fr/challenge',
 		}, function(response){});
 	}
