--- a/challenge/index.html
+++ b/challenge/index.html
@@ -346,7 +346,7 @@
 		FB.ui({
 			method: 'share',
 			display: 'popup',
-			quote: "Je viens de m'engager à passer des fêtes sans souffrances animales avec l’association WELFARM.\r\n Vous aussi, relevez le challenge #ZéroFoieGras ! \u000ARDV sur action.welfarm.fr/challenge",
+			quote: "Je viens \u000Ade m'engager\u000A à passer des fêtes sans souffrances animales avec l’association WELFARM.\r\n Vous aussi, relevez le challenge #ZéroFoieGras ! \u000ARDV sur action.welfarm.fr/challenge",
 			href: 'http://action.welfarm.fr/challenge',
 		}, function(response){});
 	}
