Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -321,10 +321,10 @@
 						</div>
 					</div>
 					<div class="row margin-bottom-2">
-						<div class="column small-offset-1 small-10 medium-offset-2 medium-4 margin-bottom-1">
+						<!-- <div class="column small-offset-1 small-10 medium-offset-2 medium-4 margin-bottom-1">
 							<a href="#"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 20px;">J'AGIS</div></a>
-						</div>
-						<div class="column small-offset-1 small-10 medium-offset-0 medium-4 margin-bottom-1 end">
+						</div> -->
+						<div class="column small-offset-1 small-10 medium-offset-4 medium-4 margin-bottom-1 end">
 							<a href="https://donner.welfarm.fr/b?cid=28&lang=fr_FR"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 20px;">JE FAIS UN DON</div></a>
 						</div>
 					</div>
