Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -235,7 +235,7 @@
 	</section>
 	<section id="professionnels" class="text-center">
 		<div class="row expanded">
-			<div class="column small-12 large-7 text-center">
+			<div class="column small-12 large-7 text-center" id="column-pro">
 				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/bot-defiez.png"/>
 				<div>
 					<h4>DES PROFESSIONNELS S'ENGAGENT</h4>
