Updated 'zerofoiegras/index.html' via CloudCannon

--- a/zerofoiegras/index.html
+++ b/zerofoiegras/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:url"           content="http://action.welfarm.fr/challenge" />
+	<meta property="og:url"           content="http://action.welfarm.fr/zerofoiegras" />
 	<meta property="og:type"          content="Website" />
 	<meta property="og:title"         content="Je participe au challenge ZEROFOIEGRAS.FR" />
 	<meta property="og:description"   content="En France, chaque année, 35 millions de canards sont gavés dans d’horribles souffrances pour la production de foie gras, de magrets et confits… j’agis" />
@@ -363,7 +363,7 @@
 				method: 'share',
 				display: 'popup',
 				quote: "Je viens de m'engager à passer des fêtes sans souffrances animales avec l’association WELFARM. Vous aussi, relevez le challenge #ZéroFoieGras ! RDV sur http://bit.ly/ZeroFoieGras",
-				href: 'http://action.welfarm.fr/challenge',
+				href: 'http://action.welfarm.fr/zerofoiegras',
 			}, function(response){});
 		}
 
