Updated 'zerofoiegras/index.html' via CloudCannon

--- a/zerofoiegras/index.html
+++ b/zerofoiegras/index.html
@@ -167,7 +167,7 @@
 												<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/mettez.png" style="margin-right: 10px;"/>
 											</div>
 											<div style="display: table-cell;vertical-align: middle;">
-												<span id="mettez-defi">METTEZ AU DÉFI VOS AMIS</span>
+												<span id="mettez-defi">MA FEUILLE DE ROUTE</span>
 											</div>
 										</div>
 									</div>
@@ -362,7 +362,7 @@
 			FB.ui({
 				method: 'share',
 				display: 'popup',
-				quote: "Je viens de m'engager à passer des fêtes sans souffrances animales avec l’association WELFARM. Vous aussi, relevez le challenge #ZéroFoieGras ! RDV sur http://bit.ly/ZeroFoieGras",
+				quote: "Je viens de m'engager à passer des fêtes sans foie gras.Vous aussi, relevez le défi #ZéroFoieGras. RDV sur http://bit.ly/ZeroFoieGras !",
 				href: 'http://action.welfarm.fr/zerofoiegras',
 			}, function(response){});
 		}
